# SSH-Hubbard

./: .gitignore  CMakeLists.txt  README.md
figure/: CDWdoping1over12.eps  CDWomega10.eps  ChargeCorrelationo1over12.eps  ChargeCorrelationomega10.eps  CompareSC.eps  CompareSC2.eps  ExtrapolationEg.eps  Lattice.eps  PairingEvolution.eps  PhaseDiagram.eps  PhaseDiagramUgreaterthan4.eps  PhaseDiagram_Holstein.eps  PhaseDiagram_small_point.eps  PhysicsPropertiesForCDW.eps  PhysicsPropertiesForCDWlambda0_1.eps  PhysicsPropertiesForDwaveSC.eps  PhysicsPropertiesForDwaveSC_v1.eps  PhysicsPropertiesForSwaveSC.eps  SCdoping1over12.eps  SComega10.eps  SM_HolsteinCDW.eps  SM_s_wave_state.eps  SpinCorrelationdoping1over12.eps  SpinCorrelationomeg10.eps  doping1over12Data.eps  omega10Data.eps  single_particle_4x32U8lambda0_3.eps
note/: Discussion_For_Plaquette_d_wave.pptx  Holstein-Hubbard DMRG.key  HolsteinNote.pptx  PhaseDiagramDiscussion.pptx  SSH-Hubbard-Note5.pptx  SSH-Hubbard-Note6.pptx  Technical-Note.pptx  ~$SSH-Hubbard-Note6.pptx
plot/: AcdwU8lambda0_3.eps  ChargeCorrelation4x16U8lambda0_3.m  ChargeCorrelation4x24U8lambda0_3.m  ChargeCorrelation4x32U8lambda0_3.m  ChargeCorrelation4x40U8lambda0_3.m  ChargeCorrelation4x48U0lambda0_3.m  ChargeCorrelation4x48U8lambda0_01.m  ChargeCorrelation4x48lambda0_3.m  ChargeDensity4x16lambda0_3.m  ChargeDensity4x16lambda0_3_fit2.m  ChargeDensity4x24lambda0_3.m  ChargeDensity4x24lambda0_3_fit2.m  ChargeDensity4x32U1_5lambda0_1.m  ChargeDensity4x32U2lambda0_05.m  ChargeDensity4x32U3lambda0_1.m  ChargeDensity4x32U3lambda0_1_filled_stripe.m  ChargeDensity4x32U4lambda0_3.m  ChargeDensity4x32lambda0_3.m  ChargeDensity4x32lambda0_3_aux.m  ChargeDensity4x32lambda0_3_fit2.m  ChargeDensity4x32lambda0_3_main.m  ChargeDensity4x40lambda0_3.m  ChargeDensity4x40lambda0_3_fit2.m  ChargeDensity4x48U0lambda0_3.m  ChargeDensity4x48U2lambda0_3.m  ChargeDensity4x48U3lambda0_1.m  ChargeDensity4x48U8lambda0_01.m  ChargeDensity4x48lambda0_01.m  ChargeDensity4x48lambda0_3.m  ChargeDensity4x48lambda0_3_aux.m  ChargeDensityOBC4x32U8lambda0_3.m  ChargeDensityProfileU8lambda0_3Lx32.eps  ChargeDensityProfileU8lambda0_3Lx32SquareFigure.eps  ChargeDensityProfileU8lambda0_3Lx40.eps  ChargeDensity_filled_stripe.eps  CompareSCOnDiffRefPoints.m  Copy_of_PlaquatteDwaveSC4x32lambda0_3.m  DOS_freeHubbard.m  DwaveSC4x32lambda0_3OXSSH.m  DwaveSC4x32lambda0_3OXSSHXXcomponent.m  (+115 more)
plot/CDW-state/: CDWlambda0_1.eps  ChargeCorrelation4x48U8lambda0_01.m  ChargeDensity4x48U8lambda0_01.m  ChargeDensity4x48U8lambda0_1.m  ChargeDensity4x48lambda0_01.m  ChargeDensity4x48lambda0_1.m  SC4x48lambda0_01.m  SC4x48lambda0_1.m  SCcorrelation_filled_stripe.eps  SClambda0_1.eps
plot/EEdata/: EE4x48lambda_03D10000.mat  EE4x48lambda_03D12000.mat  EE4x48lambda_03D14000.mat  EE4x48lambda_03D8000.mat
plot/Holstein-Hubbard/: HolsteinChargeCorrelationFilledStrtipe.eps  HolsteinChargeCorrelationU0lambda0_1.eps  HolsteinChargeCorrelationU0lambda0_3.eps  HolsteinChargeCorrelationU1lambda0_3.eps  HolsteinChargeDensityU0lambda0_1.eps  HolsteinChargeDensityU2lambda0_1.m  HolsteinChargeDensitylambda0_3U8D16000RandomInitial.eps  HolsteinSCFilled_stripe.eps  HolsteinSCU0lambda0_1.m  HolsteinSCU2lambda0_1.eps  HolsteinSCU6lambda0_3.m  Holstein_FilledStripe.eps  holstein-chargedensity-U0lambda0_3.eps
plot/d-wave/: ChargeDensity4x32lambda0_3_main.m  ChargeDensityProfileU8lambda0_3Lx32SquareFigure.eps  PlaquatteDwaveSC4x32lambda0_3.eps  PlaquatteDwaveSC4x32lambda0_3.m  SCOBC.eps  SCOBC4x32U8lambda0_3.m  plotAcdw_extrapolation.m  plotAcdwlambda0_3.m  plotSClambda0_3.m  plotSpinCorrelationlambda0_3.m
plot/d-wave-sub/: ChargeCorrelation4x32U8lambda0_3.m  ChargeCorrelation4x40U8lambda0_3.m  ChargeCorrelationMF4x32U8lambda0_3.m  ChargeDensity4x24lambda0_3_fit2.m  ChargeDensity4x32lambda0_3.m  ChargeDensity4x32omega10lambda0_3.m  ChargeDensity4x36omega5lambda0_3doping1over12.m  ChargeDensity4x40lambda0_3_fit2.m  ChargeDensity4x48lambda0_2.m  ChargeDensity4x48lambda0_3.m  ChargeDensity4x48lambda0_4.m  ChargeDensityMF4x32lambda0_3.m  JudgePairSymmetryMF4x32U8lambda0_3.m  PlotLambda0_3XPattern.m  SC4x32lambda0_3.m  SC4x32lambda0_3pp.m  SC4x32omega10lambda0_3.m  SC4x36U8loping1over12.m  SC4x40lambda0_3_classA.m  SC4x40lambda0_3_classD.m  SC4x48lambda0_2.m  SC4x48lambda0_3.m  SC4x48lambda0_3pp.m  SCMF4x32lambda0_3.m  SpinCorrelation4x40lambda0_3.m  SpinCorrelation4x48U8lambda0_01.m  phonon_x_lambda0_3.eps  single_particle_4x32U8lambda0_3.m  single_particle_correlationLx32U8lambda0_3.eps
plot/omega_dependence/: ChargeDensity4x16omega100.m  ChargeDensity4x24omega100.m  ChargeDensity4x32omega100.m  ChargeDensity4x32omega1000.m  ChargeDensity4x32omega10000.m
plot/reply/: ChargeCorrelationdoping12.m  ChargeCorrelationomega10.m  ChargeDensity4x32omega10lambda0_3.m  ChargeDensity4x36U8omega5lambda0_3doping1over12.m  ChargeDensity4x36omega5lambda0_3doping1over12.m  CompareSCLx32.m  CompareSCLx40.m  CompareSCOBC.m  SC4x32omega10lambda0_3.m  SC4x36U6loping1over12.m  SC4x36U8loping1over12.m  SpinCorrelationdoping12.m  SpinCorrelationomega10.m  read_hybrid_space_SC.m
plot/s-wave/: ChargeCorrelation4x48U0lambda0_3.m  (+9 more)
plot_adiabatic/: PhononX4x16.eps  PhononX6x16.eps  SC4x16.eps  nf.json  plotChargeDensity.m  plotPhononX.m  plotSC.m
src/: CMakeLists.txt  Hubbard_vmps.cpp  MF_mpogen.cpp  OBCmeasure1.cpp  OBCmeasure2.cpp  OBCmeasureSC.cpp  OBCmeasureSC_plaquette_sym.cpp  OBCmpogen.cpp  OBCparallel.cpp  OBCsshMC.cpp  continue.cpp  fix.cpp  fix1.cpp  fix_mps.cpp  fix_mps2.cpp  fix_update_lenv.cpp  fix_update_renv.cpp  gqdouble.h  holstein2dmpogen.cpp  holstein_measure1.cpp  holstein_measure2.cpp  holstein_measureSC.cpp  holstein_parallel.cpp  main_parallel.cpp  measure.cpp  measure1.cpp  measure2.cpp  measureSC.cpp  measureSC_plaquette_sym.cpp  move_center.cpp  mpi_test.cpp  my_measure.h  my_measure_appendix.h  myutil.cpp  myutil.h  operators.cpp  operators.h  ox_measureSC.cpp  ox_measureSC_pla.cpp  ox_parallel.cpp  (+32 more)
src_adiabatic_limit/: gqdouble.h  operators.cpp  operators.h  params.json  params_case.h  sshh_cylinder_adiabatic_dmrg.cpp
(+8 files in other folders)
